Added CSS normalization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Front-end News</title>
+        <link rel="stylesheet" href="normalize.css" media="screen">
     </head>
     <body>
         <header>
@@ -40,7 +41,6 @@
                 <li>
                     <a href="#">React and the Economics of Dynamic Web Interfaces</a>
                 </li>
-                <li>
             </ol>
         </main>
     </body>
